--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Allows you to more easily enter your SwissPass ID.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "author": "Sebastian Gfeller (sebastian.gfeller@gmail.com)",
   "license": "Apache-2.0",
   "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   }
