--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
+  },
+  "dependencies": {
+    "quagga": "^0.12.1"
   }
 }
