--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "html-webpack-plugin": "^3.2.0",
+    "javascript-barcode-reader": "^0.4.12",
     "webpack": "^4.30.0",
     "webpack-cli": "^3.3.0"
   }
